--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puissance 4</title>
+    <title>Memory</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="grid-container">
+
+    </div>
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
