--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puissance 4</title>
+    <title>Memory</title>
 </head>
 <body>
-    
+    <h1>Memory game</h1>
+
+    <div id="">
+    </div>
+
+    <label for="pseudo">Pseudo :</label>
+    <input type="text" id="pesudoInput">
+    <button onclick="ajouterPseudo()">Ajouter</button>
 </body>
 <script src="script.js"></script>
 </html>
