--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <label for="pseudo">Pseudo :</label>
     <input type="text" id="pesudoInput">
-    <button onclick="ajouterPseudo()">Ajouter</button>
+    <button id="event">Ajouter</button>
     <script src="script.js"></script>
 </body>
 </html>
