📦 NEW: Add all assets + function choose pairs

--- a/index.html
+++ b/index.html
@@ -16,10 +16,19 @@
             <button>Restart</button>
         </div>
     </div>
+    <main>
+        <div class="title">
+            <h2>Choisissez le nombre de pairs !</h2>
+        </div>
+        <div class="choose">
+            <span id="choosePairsNumber" value="4"></span>
+            <span id="choosePairsNumber" value="8"></span>
+            <span id="choosePairsNumber" value="12"></span>
+            <span id="choosePairsNumber" value="14"></span>
+        </div>
+    </main>
     
-    <label for="pseudo">Pseudo :</label>
-    <input type="text" id="pesudoInput">
-    <button id="event">Ajouter</button>
+    
     <script src="script.js"></script>
 </body>
 </html>
