--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Memory</title>
 </head>
 
 <body>
     <h2>Choix du mode</h2>
     <form action="functions.php" method="post">
-        <button name="mode" value="solo">Solo</button>
-        <button name="mode" value="multi">Multijoueur</button>
+        <button class="mode" name="mode" value="solo">Solo</button>
+        <button class="mode" name="mode" value="multi">Multijoueur</button>
     </form>
-
-    <script>
-    </script>
 
 </html>
