--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       </div>
     </main>
     <div id="grid-container">
-      <div id="tableau"></div>
+      <div id="tableau">
+        
+      </div>
       <div class="content">
         <button>Restart</button>
       </div>
