👌 IMPROVE:  New assets

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div class="title">
         <h2>Choisissez le nombre de pairs !</h2>
       </div>
+      <h2 class="titlePlay">Trouvez les paires !</h2>
       <div class="choose">
         <span class="choosePairsNumber" data-value="4">4</span>
         <span class="choosePairsNumber" data-value="8">8</span>
@@ -21,7 +22,7 @@
     </main>
     <div id="grid-container">
       <div id="tableau">
-        
+
       </div>
       <div class="content">
         <button>Restart</button>
