👌 IMPROVE: Add scoreboard + Fieldset

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   <body>
     <h1>Memory game</h1>
     <main>
+      <aside>
+        <fieldset>
+          <legend>Pseudo</legend>
+          PSEUDO DU JOUEUR
+        </fieldset>
+        <fieldset>
+          <legend>Victoires</legend>
+            Nombres de victoires
+        </fieldset>
+        <fieldset class="scoreboard">
+            Scoreboard
+        </fieldset>
+      </aside>
       <div class="title">
         <h2>Choisissez le nombre de pairs !</h2>
       </div>
@@ -27,6 +40,39 @@
       <div class="content">
         <button>Restart</button>
       </div>
+    </div>
+
+    <div class="modal">
+      <div>
+        <table>
+          <tr>
+            <th>Numero</th>
+            <th>Nom </th>
+            <th>Win</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Jeu 1</td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Jeu 2</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Jeu 2</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Jeu 2</td>
+            <td>3</td>
+          </tr>
+        </table>
+      </div>
+      <span class="closeButton">X</span>
     </div>
 
     <script src="script.js"></script>
