👌 IMPROVE: Style index + functions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-    <h2>Choix du mode</h2>
+    <div class="animated-background">
+        <div class="gradient"></div>
+        <div class="gradient"></div>
+        <div class="gradient"></div>
+    </div>
+    <div class="title">
+        <h1>Memory</h1>
+        <h2>Choix du mode</h2>
+    </div>
     <form action="functions.php" method="post">
         <button class="mode" name="mode" value="solo">Solo</button>
         <button class="mode" name="mode" value="multi">Multijoueur</button>
