👌 IMPROVE: Button back top left

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <form action="functions.php" method="post">
         <button class="mode" name="mode" value="solo">Solo</button>
-        <button class="mode" name="mode" value="multi">Multijoueur</button>
+        <button class="mode" name="mode" value="multi" disabled>Multijoueur</button>
     </form>
 
 </html>
