📦 NEW: Landing page

--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
 </head>
 
 <body>
-    <div class="animated-background">
-        <div class="gradient"></div>
-        <div class="gradient"></div>
-        <div class="gradient"></div>
-    </div>
+    <div class="background"></div>
+    <div class="overlay"></div>
     <div class="title">
-        <h1>Memory</h1>
-        <h2>Choix du mode</h2>
+        <h1>Jeu du Memory</h1>
+        <h4>Decouvrez les paires de cartes et montez dans le classement !</h4>
+        
     </div>
     <form action="functions.php" method="post">
         <button class="mode" name="mode" value="solo">Solo</button>
-        <button class="mode" name="mode" value="multi" disabled>Multijoueur</button>
+        <button class="mode" name="mode" value="multi" disabled style="background-color: grey; color: lightgrey;">Multijoueur</button>
     </form>
 
 </html>
