--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
     <div class="background"></div>
     <div class="overlay"></div>
     <div class="title">
+        <span class="point first"></span>
+        <span class="point second"></span>
+        <span class="point third"></span>
+        <span class="point fourth"></span>
+        <span class="point fived"></span>
+        <span class="point sixed"></span>
         <h1>Jeu du Memory</h1>
         <h4>Decouvrez les paires de cartes et montez dans le classement !</h4>
-        
     </div>
     <form action="functions.php" method="post">
         <button class="mode" name="mode" value="solo">Solo</button>
-        <button class="mode" name="mode" value="multi" disabled style="background-color: grey; color: lightgrey;">Multijoueur</button>
+        <button class="mode" name="mode" value="multi" disabled style="background-color: grey; color: lightgrey;">Multijoueur (Comming soon)</button>
     </form>
 
 </html>
